# imdb-movie-scraper

./: README.md  imdb_scraper.py  pyproject.toml
